# Zappype

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  MouseStatus.hpp  README.md  RFC-ZAPPYPE.md  coding-style.sh  run-cmakes.sh  server.output  zappy_server
src/gui/: .gitignore  CMakeLists.txt  Doxyfile.txt  Makefile  README.md
src/gui/doc/html/: AObject_8cpp__incl.md5  AObject_8hpp.html  AObject_8hpp_source.html  Actions_8cpp.html  Actions_8cpp_source.html  Actions_8hpp.html  Actions_8hpp__incl.md5  BroadCastTab_8hpp.html  BroadCastTab_8hpp__dep__incl.md5  BroadCastTab_8hpp__incl.md5  BroadCastTab_8hpp_source.html  Button_8cpp__incl.md5  Buttons_8hpp__dep__incl.md5  Buttons_8hpp__incl.md5  Buttons_8hpp_source.html  Clamp_8hpp__dep__incl.md5  Clamp_8hpp_source.html  Core_8cpp.html  Core_8cpp__incl.md5  Core_8hpp.js  Core_8hpp__dep__incl.md5  Core_8hpp__incl.md5  DrawRandom_8cpp__incl.md5  DrawRandom_8cpp_source.html  DrawRandom_8hpp.html  DrawRandom_8hpp.js  DrawRandom_8hpp__dep__incl.md5  DrawRandom_8hpp_source.html  Drawable_8cpp.html  Drawable_8cpp__incl.md5  Drawable_8cpp_source.html  Drawable_8hpp.html  Drawable_8hpp.js  Drawable_8hpp__dep__incl.md5  Drawable_8hpp__incl.md5  Drawable_8hpp_source.html  Egg_8cpp__incl.md5  Egg_8cpp_source.html  Egg_8hpp.html  Egg_8hpp.js  (+238 more)
src/gui/doc/latex/: AObject_8cpp.tex  AObject_8cpp.tex.tmp  AObject_8cpp__incl.dot  (+144 more)
src/gui/includes/: BroadCastTab.hpp  Buttons.hpp  Core.hpp  Drawable.hpp  GUI.hpp  Items.hpp  Map.hpp  Network.hpp  Parser.hpp  Stones.hpp  Team.hpp  TileButtons.hpp
src/gui/src/: Button.cpp  Core.cpp  Egg.cpp  GUI.cpp  Items.cpp  Map.cpp  Network.cpp  Parser.cpp  Stones.cpp  Team.cpp  TileInfo.cpp  TrantorButtons.cpp  main.cpp  trantorianInfo.cpp
src/server/: CMakeLists.txt  Makefile  clean_server.c  gui.c  gui_commands.c  gui_commands_1.c  handle_clients.c  handle_flags.c  handle_flags2.c  handle_gui.c  main.c  registration.c  retrieve_flags.c  setup_server.c  signal.c
src/server/includes/: client.h  clock.h  gui.h  handle_gui.h  ia.h  parsing.h  server.h  time.h  trantor.h
src/server/logical/: clock_list.c  clock_node.c  end_game.c  handle_map2.c  is_num.c  map_getter.c  map_ressources.c  time.c  trantorian.c  trantorian_death.c
src/server/network/: clean_server.c  client.c  communication.c  handle_clients.c  registration.c  request.c  setup_server.c  setup_team.c  signal.c  singleton.c
src/server/parsing/: gui.c  gui_commands.c  gui_commands2.c  handle_flags.c  handle_flags2.c  ia.c  ia_commands.c  ia_commands2.c  ia_commands3.c  ia_commands4.c  ia_commands5.c  retrieve_flags.c
src/server/src/: main.c  setup_server.c
(+478 files in other folders)
